tests/context_missing_field_bad.stderr
tests/context_missing_field_bad.sl:14:32: error: SL1004: unexpected token
